--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/utils/stripe.js",
+    "src/pages/api/create-checkout-session.js"
+  ],
   "exclude": ["node_modules"]
 }
