--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "@stripe/react-stripe-js": "^2.1.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "contentful": "^9.3.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "recoil": "^0.7.7",
+    "stripe": "^11.16.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
